--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "laracasts/testdummy": "~2.1",
         "symfony/dom-crawler": "~2.5|~2.6",
         "symfony/css-selector": "~2.5|~2.6",
-        "fabpot/goutte": "~2.0",
-        "instaclick/php-webdriver": "~1.4"
+        "fabpot/goutte": "~2.0"
     },
     "autoload": {
         "psr-4": {
